--- a/css/copyright.css
+++ b/css/copyright.css
@@ -1,4 +1,10 @@
-.footer {
+.copyright {
     background-color: var(--app-footer-background);
     color: var(--mdc-theme-text-primary-on-dark);
+    text-align: center;
+    font-size: 12px;
+}
+
+.copyright p {
+    margin: 0;
 }
