--- a/css/copyright.css
+++ b/css/copyright.css
@@ -8,3 +8,12 @@
 .copyright p {
     margin: 0;
 }
+
+.copyright a {
+    color: var(--mdc-theme-primary);
+    text-decoration: none;
+}
+
+.copyright a:hover {
+    text-decoration: underline;
+}
