--- a/css/menu.css
+++ b/css/menu.css
@@ -4,6 +4,8 @@
     --mdc-ripple-fg-opacity: .12;
 
     --mdc-text-button-label-text-size: 14px;
+
+    background: rgba(0, 0, 0, var(--mdc-ripple-fg-opacity));
 }
 
 .menu ul {
@@ -22,14 +24,16 @@
 .menu a {
     padding: 0 8px;
     text-decoration: none;
-    color: var(--mdc-theme-on-primary);
-    font-weight: var(--mdc-typography-body1-font-weight);
+    color: var(--mdc-theme-text-primary-on-dark);
     letter-spacing: 0;
     font-size: var(--mdc-text-button-label-text-size);
     position: relative;
     height: var(--app-button-height);
     display: flex;
     align-items: center;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, var(--mdc-ripple-fg-opacity));
+    text-transform: uppercase;
+    font-weight: 500;
 }
 
 .menu a::after {
