--- a/css/section.css
+++ b/css/section.css
@@ -1,4 +1,6 @@
 .section {
+    --mdc-ripple-fg-opacity: .22;
+
     filter: drop-shadow(0px -2px 3px rgba(0, 0, 0, 0.4));
 }
 
@@ -41,4 +43,41 @@
 
 .section article p {
     width: 48%;
+}
+
+.section a {
+    background: var(--mdc-theme-secondary);
+    height: 36px;
+    display: inline-block;
+    line-height: 36px;
+    padding: 0 12px;
+    border-radius: 3px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: var(--mdc-theme-text-primary-on-dark);
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 1px -2px, rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
+    font-size: 14px;
+    position: relative;
+    left: 104%;
+    transform: translateX(-50%);
+}
+
+.section a::after {
+    content: "\00a0";
+    background: var(--mdc-theme-on-primary);
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-radius: 3px;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    transform: scale(0);
+    opacity: 0;
+    transition: all 0.15s ease;
+}
+
+.section a:hover::after {
+    transform: scale(1);
+    opacity: var(--mdc-ripple-fg-opacity);
 }
